kio_obexftp: avoid duplicate slash when storing file stat

Check if url already ends in slash ("/"). Insert slash between folder
name and filename only if folder url does not end in slash.

BUG: 388626
FIXED-IN: 5.12.0